--- a/index.html
+++ b/index.html
@@ -79,5 +79,14 @@
         </div>
     </header>
     
+   
+<section>
+    <div class="container">
+          <iframe src="https://rakcomputing.github.io/organization_workflow/sthdrawio.html" width="100%" height="600px"
+            style="border: 1px solid #ddd; border-radius: 5px;">
+        </iframe>
+    </div>
+</section>
+
 </body>
 </html>
