--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
    
 <section>
     <div class="container">
-          <iframe src="https://rakcomputing.github.io/organization_workflow/sthdrawio.html" width="100%" height="600px"
-            style="border: 1px solid #ddd; border-radius: 5px;">
-        </iframe>
+    <iframe frameborder="0" style="width:100%;height:323px;"
+        src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=sthworkflow.html&dark=auto#Uhttps%3A%2F%2Fraw.githubusercontent.com%2Frakcomputing%2Forganization_workflow%2Fmain%2Fsthworkflow.html"></iframe>
     </div>
 </section>
 
