--- a/index.html
+++ b/index.html
@@ -67,6 +67,24 @@
             padding: 30px;
             margin-top: 30px;
         }
+        section {
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+             font-family: 'Content', Arial, sans-serif;
+        
+        }
+        section .container {
+            height: 100%;
+       font-family: 'Content', Arial, sans-serif;
+        
+
+        }
+        section iframe {
+            height: 100%;
+        }
     </style>
 </head>
 <body>
@@ -82,8 +100,8 @@
    
 <section>
     <div class="container">
-    <iframe frameborder="0" style="width:100%;height:323px;"
-        src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=sthworkflow.html&dark=auto#Uhttps%3A%2F%2Fraw.githubusercontent.com%2Frakcomputing%2Forganization_workflow%2Fmain%2Fsthworkflow.html"></iframe>
+    <iframe  frameborder="0" style="width:100%;height:323px;"
+        src="https://viewer.diagrams.net/index.html?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=sthdrawio.html&dark=auto#Uhttps%3A%2F%2Fraw.githubusercontent.com%2Frakcomputing%2Forganization_workflow%2Fmain%2Fsthdrawio.html#%7B%22pageId%22%3A%226MWHm5wLVkFCOMY6QIN_%22%7D"></iframe>
     </div>
 </section>
 
